# dits

./: .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  benchmark_downloads.sh  package-lock.json  package.json  simple_test.sh  vercel.json
apps/cli/: .rustfmt.toml  Cargo.toml  clippy.toml  justfile  package.json
apps/cli/crates/dits-api/: Cargo.toml
apps/cli/crates/dits-api/src/: error.rs  main.rs  routes.rs  state.rs
apps/cli/crates/dits-cache/: Cargo.toml
apps/cli/crates/dits-cache/src/: disk.rs  lib.rs  memory.rs  redis.rs
apps/cli/crates/dits-chunker/: Cargo.toml
apps/cli/crates/dits-chunker/src/: adaptive.rs  ae.rs  chonkers.rs  fastcdc.rs  fixed.rs  gear_table.rs  hash.rs  keyed_fastcdc.rs  lib.rs  parallel_fastcdc.rs  rabin.rs  video.rs
apps/cli/crates/dits-cli/: Cargo.toml
apps/cli/crates/dits-core/: Cargo.toml
apps/cli/crates/dits-db/: Cargo.toml
apps/cli/crates/dits-protocol/: Cargo.toml
apps/cli/crates/dits-sdk/: Cargo.toml
apps/cli/crates/dits-signal/: Cargo.toml
apps/cli/crates/dits-storage/: Cargo.toml
apps/cli/crates/dits-worker/: Cargo.toml
apps/cli/migrations/: 00001_initial_schema.sql  00002_add_indices.sql  00003_add_lfs_support.sql  00004_add_analytics.sql  00005_add_reflog.sql  00006_performance_indexes.sql
apps/cli/src/: lib.rs  main.rs  telemetry.rs  util.rs
apps/cli/src/commands/: bisect.rs  blame.rs  cache_stats.rs  cherry_pick.rs  clone.rs  completions.rs  config.rs  dependency.rs  fetch.rs  fsck.rs  init.rs  inspect.rs  inspect_file.rs  lock.rs  log.rs  mod.rs  remote.rs  restore.rs  roundtrip.rs  security.rs  stash.rs  status.rs  tag.rs  video.rs
apps/cli/src/config/: mod.rs
apps/cli/src/core/: chunk.rs  commit.rs  filetype.rs  hash.rs  ignore.rs  index.rs  manifest.rs  mod.rs  storage_strategy.rs
apps/cli/src/dependency/: graph.rs  mod.rs  parser.rs  validator.rs
apps/cli/src/hooks/: mod.rs  runner.rs  templates.rs
apps/cli/src/lifecycle/: manager.rs  mod.rs  policy.rs  tier.rs  tracker.rs
apps/cli/src/metadata/: extractor.rs  mod.rs  registry.rs  store.rs
apps/cli/src/mp4/: atoms.rs  deconstructor.rs  mod.rs  offset_patcher.rs  parser.rs  reconstructor.rs
apps/cli/src/p2p/: client.rs  crypto.rs  host.rs  mod.rs  net.rs  protocol.rs  rendezvous.rs  transfer.rs  types.rs
apps/cli/src/project/: graph.rs  mod.rs  store.rs
apps/cli/src/proxy/: config.rs  generator.rs  mod.rs  store.rs  variant.rs
apps/cli/src/security/: audit.rs  encryption.rs  keys.rs  keystore.rs  mod.rs
apps/cli/src/segment/: manifest.rs  mod.rs  segmenter.rs
apps/cli/src/store/: git_engine.rs  locks.rs  mod.rs  objects.rs  refs.rs  remote.rs  remote_server.rs  repository.rs
apps/cli/src/vfs/: cache.rs  entry.rs  fuse.rs  mod.rs
apps/cli/t/: README  chainlint-cat.pl  chainlint.pl  lib-chunking.sh  lib-repo.sh  lib-video.sh  simple-test.sh  t0000-basic.sh  t0001-chunking.sh  t0002-repository.sh  t0003-cli-commands.sh  t0100-fastcdc-comprehensive.sh  t0300-file-types-comprehensive.sh  t0400-edge-cases-errors.sh  t0500-concurrent-access.sh  t0700-stress-extreme.sh  t0800-security-testing.sh  t0900-workflow-simulations.sh  t1000-p2p-networking.sh  t1100-storage-lifecycle.sh  t1200-audit-compliance.sh  t9999-infrastructure-validation.sh  test-lib.sh
apps/cli/t/advanced/: t0900-workflow-simulations.sh  t1000-p2p-networking.sh  t1100-storage-lifecycle.sh  t1200-audit-compliance.sh
apps/cli/t/basic/: t0000-basic.sh  t0001-chunking.sh  t0002-repository.sh
apps/cli/t/core/: t0100-fastcdc-comprehensive.sh  t0200-video-comprehensive.sh  t0201-algorithm-comprehensive.sh  t0202-hash-algorithm-validation.sh  t0300-file-types-comprehensive.sh  t0301-creative-assets-comprehensive.sh  t0400-rename-detection.sh
apps/cli/t/extreme-concurrency-test/: concurrent_1.txt  concurrent_10.txt  concurrent_100.txt  concurrent_11.txt  concurrent_12.txt  concurrent_13.txt  concurrent_14.txt  concurrent_15.txt  concurrent_16.txt  concurrent_17.txt  concurrent_18.txt  concurrent_19.txt  concurrent_2.txt  concurrent_20.txt  concurrent_21.txt  concurrent_22.txt  concurrent_23.txt  concurrent_24.txt  concurrent_25.txt  concurrent_26.txt  concurrent_27.txt  concurrent_28.txt  concurrent_29.txt  concurrent_3.txt  concurrent_30.txt  concurrent_31.txt  concurrent_32.txt  concurrent_33.txt  concurrent_34.txt  concurrent_35.txt  concurrent_36.txt  concurrent_37.txt  concurrent_38.txt  concurrent_39.txt  concurrent_4.txt  concurrent_40.txt  concurrent_41.txt  concurrent_42.txt  concurrent_43.txt  concurrent_44.txt  (+60 more)
apps/cli/t/fd-exhaustion-test/: fd_test_1.txt  fd_test_10.txt  fd_test_100.txt  fd_test_1000.txt  fd_test_10000.txt  fd_test_1001.txt  fd_test_1002.txt  fd_test_1003.txt  fd_test_1004.txt  fd_test_1005.txt  fd_test_1006.txt  fd_test_1007.txt  fd_test_1008.txt  fd_test_1009.txt  fd_test_101.txt  fd_test_1010.txt  fd_test_1011.txt  fd_test_1012.txt  fd_test_1013.txt  fd_test_1014.txt  fd_test_1015.txt  fd_test_1016.txt  fd_test_1017.txt  fd_test_1018.txt  fd_test_1019.txt  fd_test_102.txt  fd_test_1020.txt  fd_test_1021.txt  fd_test_1022.txt  fd_test_1023.txt  fd_test_1024.txt  fd_test_1025.txt  fd_test_1026.txt  fd_test_1027.txt  fd_test_1028.txt  fd_test_1029.txt  fd_test_103.txt  fd_test_1030.txt  fd_test_1031.txt  fd_test_1032.txt  (+9960 more)
apps/cli/t/lib/: README.md  lib-chunking.sh  lib-repo.sh  lib-video.sh
apps/cli/t/lint/: chainlint-cat.pl  chainlint.pl
apps/cli/t/perf/: p0001-chunking-performance.sh  p0002-video-performance.sh  p0003-streaming-chunking.sh  p0004-database-indexing.sh  p0005-performance-optimizations.sh  p0006-simple-performance.sh
apps/cli/t/qa/: t0400-edge-cases-errors.sh  t0500-concurrent-access.sh  t0600-data-integrity.sh  t0700-stress-extreme.sh  t0800-security-testing.sh  t1300-cross-platform.sh  t1400-network-failures.sh  t1500-long-term-aging.sh  t1600-massive-concurrency.sh  t1700-git-recovery-creative-assets.sh
apps/cli/t/utils/: run-tests.sh  simple-test.sh  test_video_features.sh
apps/cli/tests/: README.md  integration_tests.rs
(+426 files in other folders)
