[package]
name = "dits"
version = "0.1.0"
edition = "2021"
description = "Version control for video and large binary files"
license = "Apache-2.0 OR MIT"

[lib]
name = "dits"
path = "src/lib.rs"

[[bin]]
name = "dits"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Chunking and hashing
fastcdc = "3.1"
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallel processing
rayon = "1.10"

# Git integration for text files (Phase 3.6 Hybrid Storage)
git2 = { version = "0.19", features = ["vendored-libgit2"] }

# Utilities
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
indicatif = "0.17"
console = "0.15"
thiserror = "1.0"
anyhow = "1.0"
byteorder = "1.5.0"
memmap2 = "0.9.9"
# FUSE filesystem support
# On macOS: brew install macfuse, then run the installer pkg
# On Linux: apt install libfuse3-dev
fuser = { version = "0.16.0", optional = true, features = ["libfuse"] }
libc = "0.2.178"
moka = { version = "0.12.11", features = ["future"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "sync", "macros"] }
globset = "0.4.18"

# HTTP server and client for remote support
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
similar = "2.7.0"
toml = "0.9.8"
dirs = "6.0.0"
uuid = { version = "1.0", features = ["v4"] }

# Phase 7: Dependency graph / NLE project parsing
quick-xml = "0.37"
flate2 = "1.0"
zip = "2.2"
regex = "1.11"
glob = "0.3"
tar = "0.4"

# Phase 9: Security & Encryption
aes-gcm = "0.10"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"
rpassword = "7.3"

# P2P Networking (Wormhole integration)
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
bincode = "1.3"
tokio-tungstenite = "0.21"
futures-util = "0.3"
bytes = "1.0"
lru = "0.12"
dashmap = "6.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
getrandom = { version = "0.2", features = ["js"] }
hostname = "0.4"
rcgen = "0.13"
url = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.9"
rand = "0.8"

[profile.release]
lto = true
strip = true

[features]
fuser = ["dep:fuser"]
