[package]
name = "dits-chunker"
description = "Content-defined chunking for the Dits version control system"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dits-core = { path = "../dits-core" }

# Async
tokio = { workspace = true, features = ["io-util"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Chunking
fastcdc = { workspace = true }

# Cryptography
blake3 = { workspace = true }
sha2 = "0.10.8"
sha3 = "0.10.8"
hmac = "0.12.1"
rand = "0.8.5"

# Compression
zstd = { workspace = true }
lz4_flex = { workspace = true }

# Utilities
bytes = { workspace = true }
tracing = { workspace = true }

# Parallel processing
rayon = { workspace = true }
num_cpus = "1.16.0"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
serde_json = { workspace = true }
