[package]
name = "dits-cli"
description = "Command-line interface for the Dits version control system"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "dits"
path = "src/main.rs"

[dependencies]
dits-core = { path = "../dits-core" }
dits-sdk = { path = "../dits-sdk" }

# Async
tokio = { workspace = true, features = ["signal"] }

# CLI
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
bincode = "1.3"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# P2P / Networking (Wormhole-style)
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
blake3 = "1.5"
getrandom = "0.2"
hex = "0.4"
hostname = "0.4"
futures-util = "0.3"
tokio-tungstenite = "0.24"

# P2P Discovery
mdns-sd = "0.11"
async-trait = "0.1"

# UI/UX
qrcode = "0.14"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
