[package]
name = "dits-db"
description = "Database layer for the Dits version control system"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dits-core = { path = "../dits-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
