[package]
name = "dits-sdk"
description = "Rust SDK for the Dits version control system"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dits-core = { path = "../dits-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
url = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
